Fix some spacing errors

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ html, body {
     margin: 0;
     padding: 0;
     min-height: 100%;
-    min-height: 100vh;
+    // min-height: 100vh;
     min-width: 100%;
 }
 
@@ -41,6 +41,9 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    h1, p {
+        margin: 0;
+    }
 }
 
 .xp {
@@ -68,10 +71,13 @@ body {
 .pcard {
     margin: 25px 25px;
     text-align: center;
-    background-color: #444;
     width: 400px;
     height: 260px;
+    background-color: #444;
+    background-size: contain;
+    background-repeat: no-repeat;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .pcard:after {
@@ -89,19 +95,43 @@ body {
     opacity: 1;
 }
 
+#intuit {
+    background-image: url("../img/mint1.png");
+}
+
+#lah {
+    background-image: url("../img/lah.png");
+}
+
+#hsh {
+    background-image: url("../img/hsh.png");
+}
+
 .footer {
-    height: 70px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+        text-align: center;
+        font-family: Roboto;
+        font-weight: 300;
+        font-size: 16px;
+        color: #bbb;
+        padding-bottom: 20px;
+    }
 
     .icons {
-        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-top: 15px;
     }
+
     .icons i {
-        margin-left: 15px;
-        margin-right: 15px;
+        padding: 15px 15px;
         color: #bbb;
         font-size: 24px;
     }
